Fixed bug with Contact Us button, changed z-index to 2

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -647,6 +647,7 @@ hr {
     margin-right: auto;
     font-size: 1.5rem;
     text-decoration-line: none;
+    z-index: 2;
 }
 
 .contact-mobile-button:hover {
